// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots More info Default 1`] = `
.c2 {
  position: relative;
  display: inline-block;
}

.c2 .hit-area {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.c2 .appear-enter {
  opacity: 0;
}

.c2 .appear-enter-active {
  opacity: 1;
  -webkit-transition: opacity 200ms ease-in;
  transition: opacity 200ms ease-in;
}

.c2 .appear-exit {
  opacity: 1;
}

.c2 .appear-exit-active {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-out;
  transition: opacity 200ms ease-out;
}

.c1 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: left;
  font-weight: 600;
}

.c0 .icon {
  display: inline-block;
  margin: 0 8px;
  cursor: pointer;
}

.c0 .icon:hover,
.c0 .hovered {
  color: #3498db;
}

<div>
  <div
    className="c0"
  >
    <div
      className="text  c1"
      fontWeight="title"
      size={16}
      type="#59636f"
    >
      Mouse over the icon for more info
      <div
        className="icon c2"
      >
        <div
          className="hit-area"
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
        />
        <i
          className="wg-question"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots More info Without text - tooltip left aligned 1`] = `
.c2 {
  position: relative;
  display: inline-block;
}

.c2 .hit-area {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.c2 .appear-enter {
  opacity: 0;
}

.c2 .appear-enter-active {
  opacity: 1;
  -webkit-transition: opacity 200ms ease-in;
  transition: opacity 200ms ease-in;
}

.c2 .appear-exit {
  opacity: 1;
}

.c2 .appear-exit-active {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-out;
  transition: opacity 200ms ease-out;
}

.c1 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: left;
  font-weight: 600;
}

.c0 .tooltip {
  margin-left: -4px;
}

.c0 .icon {
  display: inline-block;
  margin: 0 8px;
  cursor: pointer;
}

.c0 .icon:hover,
.c0 .hovered {
  color: #3498db;
}

<div>
  <div
    className="c0"
  >
    <div
      className="text  c1"
      fontWeight="title"
      size={16}
      type="#59636f"
    >
      <div
        className="icon c2"
      >
        <div
          className="hit-area"
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
        />
        <i
          className="wg-question"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots More info Without text - tooltip right aligned 1`] = `
.c2 {
  position: relative;
  display: inline-block;
}

.c2 .hit-area {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.c2 .appear-enter {
  opacity: 0;
}

.c2 .appear-enter-active {
  opacity: 1;
  -webkit-transition: opacity 200ms ease-in;
  transition: opacity 200ms ease-in;
}

.c2 .appear-exit {
  opacity: 1;
}

.c2 .appear-exit-active {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-out;
  transition: opacity 200ms ease-out;
}

.c1 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: left;
  font-weight: 600;
}

.c0 .tooltip {
  margin-left: -4px;
}

.c0 .icon {
  display: inline-block;
  margin: 0 8px;
  cursor: pointer;
}

.c0 .icon:hover,
.c0 .hovered {
  color: #3498db;
}

<div
  style={
    Object {
      "marginLeft": "200px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="text  c1"
      fontWeight="title"
      size={16}
      type="#59636f"
    >
      <div
        className="icon c2"
      >
        <div
          className="hit-area"
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
        />
        <i
          className="wg-question"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots More info extended style 1`] = `
.c3 {
  position: relative;
  display: inline-block;
}

.c3 .hit-area {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.c3 .appear-enter {
  opacity: 0;
}

.c3 .appear-enter-active {
  opacity: 1;
  -webkit-transition: opacity 200ms ease-in;
  transition: opacity 200ms ease-in;
}

.c3 .appear-exit {
  opacity: 1;
}

.c3 .appear-exit-active {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-out;
  transition: opacity 200ms ease-out;
}

.c2 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: left;
  font-weight: 600;
}

.c1 .icon {
  display: inline-block;
  margin: 0 8px;
  cursor: pointer;
}

.c1 .icon:hover,
.c1 .hovered {
  color: #3498db;
}

.c0 .text {
  font-family: serif;
}

.c0 .icon {
  position: relative;
}

.c0 .icon i {
  visibility: hidden;
}

.c0 .icon .hit-area {
  z-index: 1;
}

.c0 .icon::before {
  content: '🤔';
  position: absolute;
  top: 0;
}

.c0 .icon.tooltip {
  width: 250px;
  white-space: pre-line;
  text-align: center;
}

<div>
  <div
    className="c0 c1"
  >
    <div
      className="text  c2"
      fontWeight="title"
      size={16}
      type="#59636f"
    >
      How much wood could a woodchuck chuck if a woodchuck could chuck wood?
      <div
        className="icon c3"
      >
        <div
          className="hit-area"
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
        />
        <i
          className="wg-question"
        />
      </div>
    </div>
  </div>
</div>
`;
